remove grey hover highlights above/below the events update (number) of events in tabs after deleting event add hover mouse icon to delete/search for meeting point fix alignment for clear/search address add tooltips for clear/search address and edit/delete event

--- a/app/assets/stylesheets/ride.css.scss
+++ b/app/assets/stylesheets/ride.css.scss
@@ -152,3 +152,7 @@ body {
 .eventsearch-index-cell:hover {
 	background-color: #eee;
 }
+
+#clear_text, #search_for_address {
+top:0px;
+}
